--- a/best.css
+++ b/best.css
@@ -6,7 +6,7 @@
 }
 .chat-gpt{
     width: 70%;
-    height: 90vh;
+    height: 100vh;
     border: 2px solid black;
     display: flex;
     flex-direction: column;
@@ -35,16 +35,17 @@
     justify-content: center;
     gap: 0.5rem;
     box-shadow: 10px white;
+    /* border: 2px solid red; */
 
   
 
 }
 .mybutton1{
     /* max-width: 70%; */
-    height: auto;
+    height: 40%;
     justify-content: flex-end;
     display: flex;
-    margin-top: ;
+    /* margin-top: ; */
   
 
 }
@@ -73,7 +74,7 @@
 }
 .mybutton2{
     width: 100%;
-    height: auto;
+    height: 40%;
     justify-content: flex-start;
    margin: 10px 0;
     display: flex;
@@ -113,7 +114,7 @@
 }
 .chat-gpt3{
     width: 100%;
-    height: 10%;
+    height: 30%;
     
 
 }
